src/jminusminus/Parser.java
// Copyright 2013 Bill Campbell, Swami Iyer and Bahar Akbal-Delibas

package jminusminus;

import java.lang.reflect.Array;
import java.util.ArrayList;
import static jminusminus.TokenKind.*;

/**
 * A recursive descent parser that, given a lexical analyzer (a
 * LookaheadScanner), parses a Java compilation unit (program file), taking
 * tokens from the LookaheadScanner, and produces an abstract syntax tree (AST)
 * for it.
 */

public class Parser {

	/** The lexical analyzer with which tokens are scanned. */
	private LookaheadScanner scanner;

	/** Whether a parser error has been found. */
	private boolean isInError;

	/** Wheter we have recovered from a parser error. */
	private boolean isRecovered;

	/**
	 * Construct a parser from the given lexical analyzer.
	 *
	 * @param scanner the lexical analyzer with which tokens are scanned.
	 */

	public Parser(LookaheadScanner scanner) {
		this.scanner = scanner;
		isInError = false;
		isRecovered = true;
		scanner.next(); // Prime the pump
	}

	/**
	 * Has a parser error occurred up to now?
	 *
	 * @return true or false.
	 */

	public boolean errorHasOccurred() {
		return isInError;
	}

	// ////////////////////////////////////////////////
	// Parsing Support ///////////////////////////////
	// ////////////////////////////////////////////////

	/**
	 * Is the current token this one?
	 *
	 * @param sought the token we're looking for.
	 * @return true iff they match; false otherwise.
	 */

	private boolean see(TokenKind sought) {
		return (sought == scanner.token().kind());
	}

	/**
	 * Look at the current (unscanned) token to see if it's one we're looking for.
	 * If so, scan it and return true; otherwise return false (without scanning a
	 * thing).
	 *
	 * @param sought the token we're looking for.
	 * @return true iff they match; false otherwise.
	 */

	private boolean have(TokenKind sought) {
		if (see(sought)) {
			scanner.next();
			return true;
		} else {
			return false;
		}
	}

	/**
	 * Attempt to match a token we're looking for with the current input token. If
	 * we succeed, scan the token and go into a "isRecovered" state. If we fail,
	 * then what we do next depends on whether or not we're currently in a
	 * "isRecovered" state: if so, we report the error and go into an "Unrecovered"
	 * state; if not, we repeatedly scan tokens until we find the one we're looking
	 * for (or EOF) and then return to a "isRecovered" state. This gives us a kind
	 * of poor man's syntactic error recovery. The strategy is due to David Turner
	 * and Ron Morrison.
	 *
	 * @param sought the token we're looking for.
	 */

	private void mustBe(TokenKind sought) {
		if (scanner.token().kind() == sought) {
			scanner.next();
			isRecovered = true;
		} else if (isRecovered) {
			isRecovered = false;
			reportParserError("%s found where %s sought", scanner.token().image(), sought.image());
		} else {
			// Do not report the (possibly spurious) error,
			// but rather attempt to recover by forcing a match.
			while (!see(sought) && !see(EOF)) {
				scanner.next();
			}
			if (see(sought)) {
				scanner.next();
				isRecovered = true;
			}
		}
	}

	/**
	 * Pull out the ambiguous part of a name and return it.
	 *
	 * @param name with an ambiguos part (possibly).
	 * @return ambiguous part or null.
	 */

	private AmbiguousName ambiguousPart(TypeName name) {
		String qualifiedName = name.toString();
		int lastDotIndex = qualifiedName.lastIndexOf('.');
		return lastDotIndex == -1 ? null // It was a simple
				// name
				: new AmbiguousName(name.line(), qualifiedName.substring(0, lastDotIndex));
	}

	/**
	 * Report a syntax error.
	 *
	 * @param message message identifying the error.
	 * @param args    related values.
	 */

	private void reportParserError(String message, Object... args) {
		isInError = true;
		isRecovered = false;
		System.err.printf("%s:%d: ", scanner.fileName(), scanner.token().line());
		System.err.printf(message, args);
		System.err.println();
	}

	// ////////////////////////////////////////////////
	// Lookahead /////////////////////////////////////
	// ////////////////////////////////////////////////

	/**
	 * Are we looking at an IDENTIFIER followed by a LPAREN? Look ahead to find out.
	 *
	 * @return true iff we're looking at IDENTIFIER LPAREN; false otherwise.
	 */

	private boolean seeIdentLParen() {
		scanner.recordPosition();
		boolean result = have(IDENTIFIER) && see(LPAREN);
		scanner.returnToPosition();
		return result;
	}

	/**
	 * Are we looking at a cast? ie.
	 *
	 * <pre>
	 *   LPAREN type RPAREN ...
	 * </pre>
	 *
	 * Look ahead to find out.
	 *
	 * @return true iff we're looking at a cast; false otherwise.
	 */

	private boolean seeCast() {
		scanner.recordPosition();
		if (!have(LPAREN)) {
			scanner.returnToPosition();
			return false;
		}
		if (seeBasicType()) {
			scanner.returnToPosition();
			return true;
		}
		if (!see(IDENTIFIER)) {
			scanner.returnToPosition();
			return false;
		} else {
			scanner.next(); // Scan the IDENTIFIER
			// A qualified identifier is ok
			while (have(DOT)) {
				if (!have(IDENTIFIER)) {
					scanner.returnToPosition();
					return false;
				}
			}
		}
		while (have(LBRACK)) {
			if (!have(RBRACK)) {
				scanner.returnToPosition();
				return false;
			}
		}
		if (!have(RPAREN)) {
			scanner.returnToPosition();
			return false;
		}
		scanner.returnToPosition();
		return true;
	}

	/**
	 * Are we looking at a local variable declaration? ie.
	 *
	 * <pre>
	 *   type IDENTIFIER {LBRACK RBRACK} ...
	 * </pre>
	 *
	 * Look ahead to determine.
	 *
	 * @return true iff we are looking at local variable declaration; false
	 *         otherwise.
	 */

	private boolean seeLocalVariableDeclaration() {
		scanner.recordPosition();
		if (have(IDENTIFIER)) {
			// A qualified identifier is ok
			while (have(DOT)) {
				if (!have(IDENTIFIER)) {
					scanner.returnToPosition();
					return false;
				}
			}
		} else if (seeBasicType()) {
			scanner.next();
		} else {
			scanner.returnToPosition();
			return false;
		}
		while (have(LBRACK)) {
			if (!have(RBRACK)) {
				scanner.returnToPosition();
				return false;
			}
		}
		if (!have(IDENTIFIER)) {
			scanner.returnToPosition();
			return false;
		}
		while (have(LBRACK)) {
			if (!have(RBRACK)) {
				scanner.returnToPosition();
				return false;
			}
		}
		scanner.returnToPosition();
		return true;
	}

	/**
	 * Are we looking at a basic type? ie.
	 *
	 * <pre>
	 * BOOLEAN | CHAR | INT
	 * </pre>
	 *
	 * @return true iff we're looking at a basic type; false otherwise.
	 */

	private boolean seeBasicType() {
		if (see(BOOLEAN) || see(CHAR) || see(INT) || see(DOUBLE)) {
			return true;
		} else {
			return false;
		}
	}

	/**
	 * Are we looking at a reference type? ie.
	 *
	 * <pre>
	 *   referenceType ::= basicType LBRACK RBRACK {LBRACK RBRACK}
	 *                   | qualifiedIdentifier {LBRACK RBRACK}
	 * </pre>
	 *
	 * @return true iff we're looking at a reference type; false otherwise.
	 */

	private boolean seeReferenceType() {
		if (see(IDENTIFIER)) {
			return true;
		} else {
			scanner.recordPosition();
			if (have(BOOLEAN) || have(CHAR) || have(INT) || have(DOUBLE)) {
				if (have(LBRACK) && see(RBRACK)) {
					scanner.returnToPosition();
					return true;
				}
			}
			scanner.returnToPosition();
		}
		return false;
	}

	/**
	 * Are we looking at []?
	 *
	 * @return true iff we're looking at a [] pair; false otherwise.
	 */

	private boolean seeDims() {
		scanner.recordPosition();
		boolean result = have(LBRACK) && see(RBRACK);
		scanner.returnToPosition();
		return result;
	}

	private boolean seeForEach() {
		scanner.recordPosition();
		if (seeReferenceType() || seeBasicType()) {
			scanner.next();
			if (have(IDENTIFIER) && have(COLON)) {
				scanner.returnToPosition();
				return true;
			}
		}
		scanner.returnToPosition();
		return false;
	}


	// ////////////////////////////////////////////////
	// Parser Proper /////////////////////////////////
	// ////////////////////////////////////////////////

	/**
	 * Parse a compilation unit (a program file) and construct an AST for it. After
	 * constructing the Parser, this is its entry point.
	 *
	 * <pre>
	 *   compilationUnit ::= [PACKAGE qualifiedIdentifier SEMI]
	 *                       {IMPORT  qualifiedIdentifier SEMI}
	 *                       {typeDeclaration}
	 *                       EOF
	 * </pre>
	 *
	 * @return an AST for a compilationUnit.
	 */

	public JCompilationUnit compilationUnit() {
		int line = scanner.token().line();
		TypeName packageName = null; // Default
		if (have(PACKAGE)) {
			packageName = qualifiedIdentifier();
			mustBe(SEMI);
		}
		ArrayList<TypeName> imports = new ArrayList<TypeName>();
		while (have(IMPORT)) {
			imports.add(qualifiedIdentifier());
			mustBe(SEMI);
		}
		ArrayList<JAST> typeDeclarations = new ArrayList<JAST>();
		while (!see(EOF)) {
			JAST typeDeclaration = typeDeclaration();
			if (typeDeclaration != null) {
				typeDeclarations.add(typeDeclaration);
			}
		}
		mustBe(EOF);
		return new JCompilationUnit(scanner.fileName(), line, packageName, imports, typeDeclarations);
	}

	/**
	 * Parse a qualified identifier.
	 *
	 * <pre>
	 *   qualifiedIdentifier ::= IDENTIFIER {DOT IDENTIFIER}
	 * </pre>
	 *
	 * @return an instance of TypeName.
	 */

	private TypeName qualifiedIdentifier() {
		int line = scanner.token().line();
		mustBe(IDENTIFIER);
		String qualifiedIdentifier = scanner.previousToken().image();
		while (have(DOT)) {
			mustBe(IDENTIFIER);
			qualifiedIdentifier += "." + scanner.previousToken().image();
		}
		return new TypeName(line, qualifiedIdentifier);
	}

	/**
	 * Added
	 * Parse a interface identifier.
	 *
	 * <pre>
	 *   interfaceIdentifier ::= qualifiedIdentifier {COMMA qualifiedIdentifier}
	 * </pre>
	 *
	 * @return an instance of TypeName.
	 */

	private ArrayList<Type> interfaceIdentifiers(ArrayList<Type> interfaceList) {
		int line = scanner.token().line();

		interfaceList.add(qualifiedIdentifier());

		while (have(COMMA)) {
			interfaceList.add(qualifiedIdentifier());
		}
		return interfaceList;
	}

	private ArrayList<TypeName> typeIdentifiers() {
		ArrayList<TypeName> types = new ArrayList<>();
		types.add(qualifiedIdentifier());

		while (have(COMMA)) {
			types.add(qualifiedIdentifier());
		}
		return types;
	}

	/**
	 * Parse a type declaration.
	 *
	 * <pre>
	 *   typeDeclaration ::= modifiers classDeclaration
	 * </pre>
	 *
	 * @return an AST for a typeDeclaration.
	 */

	private JAST typeDeclaration() {
		ArrayList<String> mods = modifiers();
		if(see(INTERFACE)) {
			return interfaceDeclaration(mods);
		} else {
			return classDeclaration(mods);
		}
	}

	/**
	 * Parse modifiers.
	 *
	 * <pre>
	 *   modifiers ::= {PUBLIC | PROTECTED | PRIVATE | STATIC | 
	 *                  ABSTRACT}
	 * </pre>
	 *
	 * Check for duplicates, and conflicts among access modifiers (public,
	 * protected, and private). Otherwise, no checks.
	 *
	 * @return a list of modifiers.
	 */

	private ArrayList<String> modifiers() {
		ArrayList<String> mods = new ArrayList<String>();
		boolean scannedPUBLIC = false;
		boolean scannedPROTECTED = false;
		boolean scannedPRIVATE = false;
		boolean scannedSTATIC = false;
		boolean scannedABSTRACT = false;
		boolean more = true;
		while (more)
			if (have(PUBLIC)) {
				mods.add("public");
				if (scannedPUBLIC) {
					reportParserError("Repeated modifier: public");
				}
				if (scannedPROTECTED || scannedPRIVATE) {
					reportParserError("Access conflict in modifiers");
				}
				scannedPUBLIC = true;
			} else if (have(PROTECTED)) {
				mods.add("protected");
				if (scannedPROTECTED) {
					reportParserError("Repeated modifier: protected");
				}
				if (scannedPUBLIC || scannedPRIVATE) {
					reportParserError("Access conflict in modifiers");
				}
				scannedPROTECTED = true;
			} else if (have(PRIVATE)) {
				mods.add("private");
				if (scannedPRIVATE) {
					reportParserError("Repeated modifier: private");
				}
				if (scannedPUBLIC || scannedPROTECTED) {
					reportParserError("Access conflict in modifiers");
				}
				scannedPRIVATE = true;
			} else if (have(STATIC)) {
				mods.add("static");
				if (scannedSTATIC) {
					reportParserError("Repeated modifier: static");
				}
				scannedSTATIC = true;
			} else if (have(ABSTRACT)) {
				mods.add("abstract");
				if (scannedABSTRACT) {
					reportParserError("Repeated modifier: abstract");
				}
				scannedABSTRACT = true;
			} else {
				more = false;
			}
		return mods;
	}

	/** ADDED
	 * Parse a interface declaration.
	 *
	 *	interfaceDeclaration ::= INTERFACE IDENTIFIER 
	 *						[EXTENDS interfaceIdentifier]
	 *						classBody 
	 * </pre>
	 *
	 *
	 * @param mods the class modifiers.
	 * @return an AST for a classDeclaration.
	 */

	private JInterfaceDeclaration interfaceDeclaration(ArrayList<String> mods) {
		int line = scanner.token().line();
		mustBe(INTERFACE);
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		ArrayList<Type> interfaceList = new ArrayList<Type>();
		Type superClass = Type.OBJECT;
		if (have(EXTENDS)) {
			interfaceIdentifiers(interfaceList);
		}

		return new JInterfaceDeclaration(line, mods, name, superClass, classBody(), interfaceList);
	}

	/**
	 * Parse a class declaration.
	 *
	 * <pre>
	 *   classDeclaration ::= CLASS IDENTIFIER 
	 *                        [EXTENDS qualifiedIdentifier] 
	 *                        classBody
	 * </pre>
	 *
	 * A class which doesn't explicitly extend another (super) class implicitly
	 * extends the superclass java.lang.Object.
	 *
	 * @param mods the class modifiers.
	 * @return an AST for a classDeclaration.
	 */

	private JClassDeclaration classDeclaration(ArrayList<String> mods) {
		int line = scanner.token().line();
		mustBe(CLASS);
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		Type superClass;
		ArrayList<Type> interfaceList = new ArrayList<Type>();
		if (have(EXTENDS)) {
			superClass = qualifiedIdentifier();
		} else {
			superClass = Type.OBJECT;
		}
		if(have(IMPLEMENTS)) {
			interfaceIdentifiers(interfaceList);
		}

		return new JClassDeclaration(line, mods, name, superClass, classBody(), interfaceList);
	}

	/**
	 * Parse a class body.
	 *
	 * <pre>
	 *   classBody ::= LCURLY
	 *                   {modifiers memberDecl}
	 *                 RCURLY
	 * </pre>
	 *
	 * @return list of members in the class body.
	 */

	private ArrayList<JMember> classBody() {
		ArrayList<JMember> members = new ArrayList<JMember>();
		mustBe(LCURLY);
		while (!see(RCURLY) && !see(EOF)) {
			members.add(memberDecl(modifiers()));
		}
		mustBe(RCURLY);
		return members;
	}

	/**
	 * Parse a member declaration.
	 *
	 * <pre>
	 *   memberDecl ::= IDENTIFIER            // constructor
	 *                    formalParameters
	 *                    block
	 *                | (VOID | type) IDENTIFIER  // method
	 *                    formalParameters
	 *                    (block | SEMI)
	 *                | type variableDeclarators SEMI
	 * </pre>
	 *
	 * @param mods the class member modifiers.
	 * @return an AST for a memberDecl.
	 */

	private JMember memberDecl(ArrayList<String> mods) {
		int line = scanner.token().line();
		JMember memberDecl = null;

		if(see(LCURLY)) {
			JBlock body = block();
			memberDecl = new JBlockDeclaration(line, mods, body);
		} else if (seeIdentLParen()) {
			// A constructor
			mustBe(IDENTIFIER);
			String name = scanner.previousToken().image();
			ArrayList<JFormalParameter> params = formalParameters();
			ArrayList<TypeName> throwTypes = null;
			if (have(THROWS)) {
				throwTypes = typeIdentifiers();
			}

			JBlock body = block();
			memberDecl = new JConstructorDeclaration(line, mods, name, params, body, throwTypes);
		} else {
			Type type = null;
			if (have(VOID)) {
				// void method
				type = Type.VOID;
				mustBe(IDENTIFIER);
				String name = scanner.previousToken().image();
				ArrayList<JFormalParameter> params = formalParameters();
				ArrayList<TypeName> throwTypes = null;
				if (have(THROWS)) {
					throwTypes = typeIdentifiers();
				}
				JBlock body = have(SEMI) ? null : block();
				memberDecl = new JMethodDeclaration(line, mods, name, type, params, body, throwTypes);
			} else {
				type = type();
				if (seeIdentLParen()) {
					// Non void method
					mustBe(IDENTIFIER);
					String name = scanner.previousToken().image();
					ArrayList<JFormalParameter> params = formalParameters();
					ArrayList<TypeName> throwTypes = null;
					if (have(THROWS)) {
						throwTypes = typeIdentifiers();
					}
					JBlock body = have(SEMI) ? null : block();
					memberDecl = new JMethodDeclaration(line, mods, name, type, params, body, throwTypes);
				} else {
					// Field
					memberDecl = new JFieldDeclaration(line, mods, variableDeclarators(type));
					mustBe(SEMI);
				}
			}
		}
		return memberDecl;
	}

	/**
	 * Parse a block.
	 *
	 * <pre>
	 *   block ::= LCURLY {blockStatement} RCURLY
	 * </pre>
	 *
	 * @return an AST for a block.
	 */

	private JBlock block() {
		int line = scanner.token().line();
		ArrayList<JStatement> statements = new ArrayList<JStatement>();
		mustBe(LCURLY);
		while (!see(RCURLY) && !see(EOF)) {
			statements.add(blockStatement());
		}
		mustBe(RCURLY);
		return new JBlock(line, statements);
	}

	/**
	 * Parse a block statement.
	 *
	 * <pre>
	 *   blockStatement ::= localVariableDeclarationStatement
	 *                    | statement
	 * </pre>
	 *
	 * @return an AST for a blockStatement.
	 */

	private JStatement blockStatement() {
		if (seeLocalVariableDeclaration()) {
			return localVariableDeclarationStatement();
		} else {
			return statement();
		}
	}

	/**
	 * Parse a statement.
	 *
	 * <pre>
	 *   statement ::= block
	 *               | IF parExpression statement [ELSE statement]
	 *               | WHILE parExpression statement 
	 *               | RETURN [expression] SEMI
	 *               | SEMI 
	 *               | statementExpression SEMI
	 * </pre>
	 *
	 * @return an AST for a statement.
	 */

	private JStatement statement() {
		int line = scanner.token().line();
		if (see(LCURLY)) {
			return block();
		} else if (have(FOR)) {
			mustBe(LPAREN);
			if (seeForEach()) {
				JFormalParameter param = formalParameter();
				mustBe(COLON);
				JExpression id = expression();
				mustBe(RPAREN);
				JStatement statement = statement();
				//return new JForEachStatement(line, param, id, statement);
				return new JForStatement(line, param, id, null, null, null, statement);
			} else {
				JVariableDeclaration init = localVariableDeclarationStatement();
				JExpression expr = expression();
				mustBe(SEMI);
				JStatement upd = statementExpression();
				mustBe(RPAREN);
				JStatement statement = statement();
				//return new JForLoopStatement(line, init, expr, upd, statement);
				return new JForStatement(line, null, null, init, expr, upd, statement);
			}
		}

		else if (have(IF)) {
			JExpression test = parExpression();
			JStatement consequent = statement();
			JStatement alternate = have(ELSE) ? statement() : null;
			return new JIfStatement(line, test, consequent, alternate);
		} else if (have(WHILE)) {
			JExpression test = parExpression();
			JStatement statement = statement();
			return new JWhileStatement(line, test, statement);
		} else if (have(RETURN)) {
			if (have(SEMI)) {
				return new JReturnStatement(line, null);
			} else {
				JExpression expr = expression();
				mustBe(SEMI);
				return new JReturnStatement(line, expr);
			}
		} else if (have(TRY)) {
			JBlock tryBody = block();
			mustBe(CATCH);
			mustBe(LPAREN);
			Type exceptionType = type();
			JVariableDeclarator exceptionDecl = variableDeclarator(exceptionType);
			mustBe(RPAREN);
			JBlock catchBody = block();
			JBlock finallyBody = null;
			if (have(FINALLY)) {
				finallyBody = block();
			}
			return new JTryCatchStatement(line, tryBody, exceptionDecl, catchBody, finallyBody);
		} else if (have(SEMI)) {
			return new JEmptyStatement(line);
		} else { // Must be a statementExpression
			JStatement statement = statementExpression();
			mustBe(SEMI);
			return statement;
		}
	}

	/**
	 * Parse formal parameters.
	 *
	 * <pre>
	 *   formalParameters ::= LPAREN 
	 *                          [formalParameter 
	 *                            {COMMA  formalParameter}]
	 *                        RPAREN
	 * </pre>
	 *
	 * @return a list of formal parameters.
	 */

	private ArrayList<JFormalParameter> formalParameters() {
		ArrayList<JFormalParameter> parameters = new ArrayList<JFormalParameter>();
		mustBe(LPAREN);
		if (have(RPAREN))
			return parameters; // ()
		do {
			parameters.add(formalParameter());
		} while (have(COMMA));
		mustBe(RPAREN);
		return parameters;
	}

	/**
	 * Parse a formal parameter.
	 *
	 * <pre>
	 *   formalParameter ::= type IDENTIFIER
	 * </pre>
	 *
	 * @return an AST for a formalParameter.
	 */

	private JFormalParameter formalParameter() {
		int line = scanner.token().line();
		Type type = type();
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		return new JFormalParameter(line, name, type);
	}

	// private JParDeclaration parDeclaration() {
	// mustBe(LPAREN);
	// Type type = type();
	// mustBe(IDENTIFIER);
	//
	// }

	/**
	 * Parse a parenthesized expression.
	 *
	 * <pre>
	 *   parExpression ::= LPAREN expression RPAREN
	 * </pre>
	 *
	 * @return an AST for a parExpression.
	 */

	private JExpression parExpression() {
		mustBe(LPAREN);
		JExpression expr = expression();
		mustBe(RPAREN);
		return expr;
	}

	/**
	 * Parse a local variable declaration statement.
	 *
	 * <pre>
	 *   localVariableDeclarationStatement ::= type 
	 *                                           variableDeclarators 
	 *                                             SEMI
	 * </pre>
	 *
	 * @return an AST for a variableDeclaration.
	 */

	private JVariableDeclaration localVariableDeclarationStatement() {
		int line = scanner.token().line();
		ArrayList<String> mods = new ArrayList<String>();
		ArrayList<JVariableDeclarator> vdecls = variableDeclarators(type());
		mustBe(SEMI);
		return new JVariableDeclaration(line, mods, vdecls);
	}


	/**
	 * Parse variable declarators.
	 *
	 * <pre>
	 *   variableDeclarators ::= variableDeclarator 
	 *                             {COMMA variableDeclarator}
	 * </pre>
	 *
	 * @param type type of the variables.
	 * @return a list of variable declarators.
	 */

	private ArrayList<JVariableDeclarator> variableDeclarators(Type type) {
		ArrayList<JVariableDeclarator> variableDeclarators = new ArrayList<JVariableDeclarator>();
		do {
			variableDeclarators.add(variableDeclarator(type));
		} while (have(COMMA));
		return variableDeclarators;
	}

	/**
	 * Parse a variable declarator.
	 *
	 * <pre>
	 *   variableDeclarator ::= IDENTIFIER
	 *                          [ASSIGN variableInitializer]
	 * </pre>
	 *
	 * @param type type of the variable.
	 * @return an AST for a variableDeclarator.
	 */

	private JVariableDeclarator variableDeclarator(Type type) {
		int line = scanner.token().line();
		mustBe(IDENTIFIER);
		String name = scanner.previousToken().image();
		JExpression initial = have(ASSIGN) ? variableInitializer(type) : null;
		return new JVariableDeclarator(line, name, type, initial);
	}

	/**
	 * Parse a variable initializer.
	 *
	 * <pre>
	 *   variableInitializer ::= arrayInitializer
	 *                         | expression
	 * </pre>
	 *
	 * @param type type of the variable.
	 * @return an AST for a variableInitializer.
	 */

	private JExpression variableInitializer(Type type) {
		if (see(LCURLY)) {
			return arrayInitializer(type);
		}
		return expression();
	}

	/**
	 * Parse an array initializer.
	 *
	 * <pre>
	 *   arrayInitializer ::= LCURLY 
	 *                          [variableInitializer 
	 *                            {COMMA variableInitializer} [COMMA]]
	 *                        RCURLY
	 * </pre>
	 *
	 * @param type type of the array.
	 * @return an AST for an arrayInitializer.
	 */

	private JArrayInitializer arrayInitializer(Type type) {
		int line = scanner.token().line();
		ArrayList<JExpression> initials = new ArrayList<JExpression>();
		mustBe(LCURLY);
		if (have(RCURLY)) {
			return new JArrayInitializer(line, type, initials);
		}
		initials.add(variableInitializer(type.componentType()));
		while (have(COMMA)) {
			initials.add(see(RCURLY) ? null : variableInitializer(type.componentType()));
		}
		mustBe(RCURLY);
		return new JArrayInitializer(line, type, initials);
	}

	/**
	 * Parse arguments.
	 *
	 * <pre>
	 *   arguments ::= LPAREN [expression {COMMA expression}] RPAREN
	 * </pre>
	 *
	 * @return a list of expressions.
	 */

	private ArrayList<JExpression> arguments() {
		ArrayList<JExpression> args = new ArrayList<JExpression>();
		mustBe(LPAREN);
		if (have(RPAREN)) {
			return args;
		}
		do {
			args.add(expression());
		} while (have(COMMA));
		mustBe(RPAREN);
		return args;
	}

	/**
	 * Parse a type.
	 *
	 * <pre>
	 *   type ::= referenceType 
	 *          | basicType
	 * </pre>
	 *
	 * @return an instance of Type.
	 */

	private Type type() {
		if (seeReferenceType()) {
			return referenceType();
		}
		return basicType();
	}

	/**
	 * Parse a basic type.
	 *
	 * <pre>
	 *   basicType ::= BOOLEAN | CHAR | INT
	 * </pre>
	 *
	 * @return an instance of Type.
	 */

	private Type basicType() {
		if (have(BOOLEAN)) {
			return Type.BOOLEAN;
		} else if (have(CHAR)) {
			return Type.CHAR;
		} else if (have(INT)) {
			return Type.INT;
		} else if (have(DOUBLE)) {
			return Type.DOUBLE;
		} else {
			reportParserError("Type sought where %s found", scanner.token().image());
			return Type.ANY;
		}
	}

	/**
	 * Parse a reference type.
	 *
	 * <pre>
	 *   referenceType ::= basicType LBRACK RBRACK {LBRACK RBRACK}
	 *                   | qualifiedIdentifier {LBRACK RBRACK}
	 * </pre>
	 *
	 * @return an instance of Type.
	 */

	private Type referenceType() {
		Type type = null;
		if (!see(IDENTIFIER)) {
			type = basicType();
			mustBe(LBRACK);
			mustBe(RBRACK);
			type = new ArrayTypeName(type);
		} else {
			type = qualifiedIdentifier();
		}
		while (seeDims()) {
			mustBe(LBRACK);
			mustBe(RBRACK);
			type = new ArrayTypeName(type);
		}
		return type;
	}

	/**
	 * Parse a statement expression.
	 *
	 * <pre>
	 *   statementExpression ::= expression // but must have 
	 *                                      // side-effect, eg i++
	 * </pre>
	 *
	 * @return an AST for a statementExpression.
	 */

	private JStatement statementExpression() {
		int line = scanner.token().line();
		JExpression expr = expression();
		if (expr instanceof JAssignment || expr instanceof JPreIncrementOp || expr instanceof JPostDecrementOp
				|| expr instanceof JPostIncrementOp || expr instanceof JPreDecrementOp
				|| expr instanceof JMessageExpression || expr instanceof JSuperConstruction
				|| expr instanceof JThisConstruction || expr instanceof JNewOp || expr instanceof JNewArrayOp
				|| expr instanceof JThrowExpression) {
			// So as not to save on stack
			expr.isStatementExpression = true;
		} else {
			reportParserError("Invalid statement expression; " + "it does not have a side-effect");
		}
		return new JStatementExpression(line, expr);
	}

	/**
	 * An expression.
	 *
	 * <pre>
	 *   expression ::= assignmentExpression
	 * </pre>
	 *
	 * @return an AST for an expression.
	 */

	private JExpression expression() {
		return assignmentExpression();
	}

	/**
	 * Parse an assignment expression.
	 *
	 * <pre>
	 *   assignmentExpression ::= 
	 *       conditionalAndExpression // level 13
	 *           [( ASSIGN  // conditionalExpression
	 *            | PLUS_ASSIGN // must be valid lhs
	 *            )
	 *            assignmentExpression]
	 * </pre>
	 *
	 * @return an AST for an assignmentExpression.
	 */

	private JExpression assignmentExpression() {
		int line = scanner.token().line();
		JExpression lhs = conditionalExpression();
		if (have(ASSIGN)) {
			return new JAssignOp(line, lhs, assignmentExpression());
		} else if (have(DIV_ASSIGN)) {
			return new JDivAssignOp(line, lhs, assignmentExpression());
		} else if (have(REM_ASSIGN)) {
			return new JRemAssignOp(line, lhs, assignmentExpression());
		} else if (have(PLUS_ASSIGN)) {
			return new JPlusAssignOp(line, lhs, assignmentExpression());
		} else if (have(MINUS_ASSIGN)) {
			return new JMinusAssignOp(line, lhs, assignmentExpression());
		} else if (have(MULT_ASSIGN)) {
			return new JMultAssignOp(line, lhs, assignmentExpression());
		} else {
			return lhs;
		}
	}

	private JExpression conditionalExpression() {
		int line = scanner.token().line();
		JExpression lhs = conditionalAndExpression();
		if (have(COND)) {
			JExpression consequent = conditionalExpression(); // I'm unsure what kind of expression it should be
			mustBe(COLON);
			JExpression alternate = conditionalExpression();
			return new JConditionalExpression(line, lhs, consequent, alternate);
		} else {
			return lhs;
		}
	}

	/**
